# movie-app-backend

./: .gitignore  Dockerfile  README.md  main.py  movies.db  pyproject.toml  requirements.txt  test.md
.github/workflows/: deploy.yml
app/: crud.py  database.py  main.py  models.py  schemas.py  seed.py
app/routers/: actors.py  directors.py  genres.py  movies.py
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
tests/: test_api_docs.py
