[project]
name = "movie-app-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=40.1.0",
    "fastapi>=0.128.0",
    "mangum>=0.20.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
